full java args customization via environment variables in PF